layout bug fix

--- a/src/sass/components/_now-playing.scss
+++ b/src/sass/components/_now-playing.scss
@@ -184,7 +184,7 @@
     width: 100%;
     height: 50%;
     z-index: -2;
-    opacity: 0.4;
+    opacity: 0.6;
   }
 }
 
