--- a/src/sass/components/_song.scss
+++ b/src/sass/components/_song.scss
@@ -46,7 +46,7 @@
       z-index: -1;
       width: 100%;
       height: 100%;
-      background-image: linear-gradient(to right, rgba(141, 153, 167, 0.4), rgba(141, 153, 167, 0.02));
+      background-image: linear-gradient(to right, rgba(69, 79, 89, 1), rgba(69, 79, 89, 0.02));
       opacity: 0;
       transform: translateX(-100%);
       transition: 0.3s ease-out;
@@ -98,7 +98,7 @@
 
   &.music-player__song--active {
     .song__details {
-      border: 1px solid rgba(141, 153, 167, 0.4);
+      border: 1px solid rgba(69, 79, 89, 0.4);
       &:before {
         transform: translateX(0);
         opacity: 1;
